--- a/Standard/lstsemantic.sty
+++ b/Standard/lstsemantic.sty
@@ -93,6 +93,7 @@ morecomment=[s]{\%\{}{\}\%},%
 morestring=[b]",%
 morecomment=[s]{?}{?},%
 morecomment=[s]{(*}{*)},%
+morekeywords={?},%
 }
 
 % OWL (Web Ontology Language) 2 Functional-style Syntax
