--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -10,12 +10,12 @@ YEAR = 1992}
 @article{OWL2,
   author = {W3C},
   title = {OWL 2 Web Ontology Language},
-  journal = {\url{https://www.w3.org/standards/techs/owl#w3c_all}},
+  note = {\url{https://www.w3.org/standards/techs/owl#w3c_all}},
 }
 @article{RDF,
   author = {W3C},
   title = {Resource Description Framework (RDF))},
-  journal = {\url{http://www.w3.org/standards/techs/rdf#w3c_all}},
+  note = {\url{http://www.w3.org/standards/techs/rdf#w3c_all}},
 }
 @article{UML,
   author = {Object Management Group},
